c4prj1_deck/grade.txt
Grading at Wed Jul 31 09:11:08 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:213:23: error: request for member ‘value’ in something not a structure or union
     if (hand->cards[i].value == hand->cards[i-1].value){
                       ^
eval.c:213:49: error: request for member ‘value’ in something not a structure or union
     if (hand->cards[i].value == hand->cards[i-1].value){
                                                 ^
Compilation of eval.c failed

Overall Grade: F
